# storyboard

./: .gitignore  AGENTS.md  CHANGELOG.md  DOCS.md  README.current.md  README.md  branches.json  eslint.config.js  index.html  package-lock.json  package.json  releasing.md  report.md  skills-lock.json  storyboard.config.json  vite.config.js  vitest.config.js  vitest.integration.config.js  vitest.setup.js
.agents/: prompt-agent.agent.md  terminal-agent.agent.md
.changeset/: beta-5-release.md  beta1-bump.md  breezy-moons-yell.md  changeset-autosync-toolbar.md  changeset-image-dropdown.md  changeset-mmme990q.md  changeset-mmnh4ss2.md  changeset-mnqi1oez.md  changeset-mnrfsmw5.md  changeset-mnrvqnh2.md  changeset-mnsoqyoq.md  changeset-mnt1eznf.md  changeset-mntd8zhz.md  changeset-mnu2nibu.md  changeset-mnu7ylhm.md  changeset-mnu8xpsm.md  changeset-mnvq3sj8.md  changeset-mnvrq0po.md  changeset-mnwyj7ae.md  changeset-mnwzbp9z.md  changeset-mnwzlxij.md  changeset-mnx242jc.md  changeset-mnx2ycrr.md  changeset-mnx63wio.md  changeset-mnx8etp3.md  changeset-mnx9lvqv.md  changeset-mnx9t6mu.md  changeset-mnxaxrb2.md  changeset-mnxd4389.md  changeset-mnxhhmwv.md  changeset-mnxpl6rw.md  changeset-mnxq9b5e.md  changeset-mnywx0ie.md  changeset-mnyxwuou.md  changeset-mnyz2fhc.md  changeset-mnyz6bm0.md  changeset-mnz8y4ql.md  (+69 more)
storyboard-desktop/src-tauri/: Cargo.toml  tauri.conf.json
storyboard-desktop/src-tauri/capabilities/: default.json
storyboard-desktop/src-tauri/src/: lib.rs  main.rs
storyboard-desktop/src-tauri/src/commands/: mod.rs  project.rs  pty.rs  sidecar.rs
(+37594 files in other folders)
