[package]
name = "storyboard-desktop"
version = "0.1.0"
description = "Storyboard Desktop — run any storyboard instance as a native app"
authors = ["dfosco"]
edition = "2021"

[lib]
name = "storyboard_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
notify = "7"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
